[gd_scene load_steps=5 format=2]

[ext_resource path="res://visual/pompy_ui.tres" type="Theme" id=1]
[ext_resource path="res://visual/font/pompy_sans_24.tres" type="DynamicFont" id=2]
[ext_resource path="res://physics/gui/titlebox.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Appear"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Title:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.65, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button1:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 1 ),
"transitions": PoolRealArray( 0.65, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Button2:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 1.1 ),
"transitions": PoolRealArray( 0.65, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Button3:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1.2 ),
"transitions": PoolRealArray( 0.65, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TitleBox" type="VBoxContainer"]
margin_left = 256.0
margin_top = 89.0
margin_right = 421.0
margin_bottom = 257.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 174.0
margin_bottom = 48.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "Space Cake"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 52.0
margin_right = 174.0
margin_bottom = 88.0
text = "Start playing"

[node name="Button2" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 92.0
margin_right = 174.0
margin_bottom = 128.0
text = "Controls"

[node name="Button3" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 132.0
margin_right = 174.0
margin_bottom = 168.0
text = "Credits"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 1 )

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
